--- a/spring-boot-shiro/src/main/resources/application.yml
+++ b/spring-boot-shiro/src/main/resources/application.yml
@@ -1,6 +1,10 @@
+
+server:
+    port: 8081
+
 spring:
     datasource:
-      url: jdbc:mysql://localhost:3306/test
+      url: jdbc:mysql://localhost:3307/shiro_learn
       username: root
       password: root
       #schema: database/import.sql
