--- a/spring-boot-shiro/src/main/resources/application.yml
+++ b/spring-boot-shiro/src/main/resources/application.yml
@@ -25,3 +25,14 @@ spring:
     thymeleaf:
        cache: false
        mode: LEGACYHTML5
+
+    redis:
+        database: 2
+        host: 10.168.99.149
+        port: 6379
+        pool:
+            max-active: 50
+            max-idle: 8
+            max-wait: 10000
+            min-idle: 0
+        timeout: 200
